<resources>
    <string name="app_name">JavaTests</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="enter">Войти</string>
    <string name="still_no_account">Еще нет аккаунта? Создать</string>
    <string name="loading">Загрузка…</string>
    <string name="name">Ваше имя</string>
    <string name="registration">Регистрация</string>

    <string name="email_not_validated">Email введен неверно.</string>

    <string name="password_not_entered">Введите пароль.</string>
    <string name="password_not_validated">Пароль должен состоять из букв латинского алфавита и хотя бы одной цифры;\nДлина пароля должна быть больше 6 знаков.</string>

    <string name="name_not_validated">Обязательное поле. Имя должно состоять из 3 или более символов.</string>

    <!--SplashActivity-->
    <string name="database_installer_error">Произошла ошибка установки базы данных: %1$s </string>

    <!--PasswordReminderDialog-->
    <string name="please_wait">Подождите пожалуйста…</string>
    <string name="remember_password_title_dialog">Вспомнить пароль</string>
    <string name="send">Отправить</string>
    <string name="cancel">Отменить</string>
    <string name="send_reminder_password">Успешно! Мы отправили вам сообщение.</string>
    <string name="reminder_email_not_validated">Email введен неверно.</string>

    <!--Navigation Menu-->
    <string name="navigation_menu_tests">Тесты</string>
    <string name="navigation_menu_questions">Вопросы к интервью</string>
    <string name="navigation_menu_articles">Статьи</string>
    <string name="navigation_menu_about">О приложении</string>
    <string name="navigation_menu_like">Оценить</string>
    <string name="navigation_menu_logout">Выйти из профиля</string>

    <!--FirebaseAuthExceptions translation-->
    <string name="error_user_disabled">Действие учетной записи приостановлено.</string>
    <string name="error_user_not_found">Нет пользователя с таким email.</string>
    <string name="error_wrong_password">Неверный пароль.</string>
    <string name="error_email_already_in_use">Данный email уже используется.</string>
    <string name="error_invalid_custom_token">The custom token format is incorrect. Please check the documentation.</string>
    <string name="error_custom_token_mismatch">The custom token corresponds to a different audience.</string>
    <string name="error_invalid_credential">The supplied auth credential is malformed or has expired.</string>
    <string name="error_invalid_email">The email address is badly formatted.</string>
    <string name="error_user_mismatch">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="error_require_recent_login">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="error_account_exisits_with_different_credential">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="error_credential_already_in_use">This credential is already associated with a different user account.</string>
    <string name="error_user_token_expired">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="error_invalid_user_token">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="error_opertion_not_allowed">This operation is not allowed. You must enable this service in the console.</string>
    <string name="error_weak_password">The given password is invalid.</string>
    <!--FirebaseExceptions-->
    <string name="error_default">Что - то пошло не так.</string>
    <string name="error_too_many_requests">Слишком много запросов. Попробуйте чуть позже.</string>
    <string name="error_network_exception">Проблемы со связью. Возможные причины:\n1. Отсутствует подключение сети Интернет\n2. Timeout подключения\n3. Прерванное подключение\n4. Недоступный хост.</string>
    <string name="error_api_not_available">Сейчас сервис не доступен.</string>

    <string name="article_category_title">Статьи</string>
    <string name="double_back_to_exit">Нажмите еще раз для выхода</string>
</resources>
